2011-07-14	Jennifer Averett

	* make/custom/pcp4.cfg: New file.

2011-06-19	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Fix broken path to clockdrv_shell.h.

2011-04-11	Keith Robertson <kjrobert at alumni dot uwaterloo dot ca>

	* ne2000/ne2000.c: Add multicast support.  Patch submitted to mailing
	list 2005-12-21.

2011-03-16	Jennifer Averett <jennifer.averett@OARcorp.com>

	PR 1729/cpukit
	* Makefile.am, configure.ac: Add next step in SMP support. This adds an
	allocated array of the Per_CPU structures to support multiple cpus vs
	a single instance of the structure which is still used if SMP support
	is disabled. Configuration support is also added to explicitly enable
	or disable SMP. But SMP can only be enabled for the CPUs which will
	support it initially -- SPARC and i386. With the stub BSP support, a
	BSP can be run as a single core SMP system from an RTEMS data
	structure standpoint.

2011-03-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1762/cpukit
	* Makefile.am, preinstall.am, console/console.c, console/keyboard.c,
	console/keyboard.h, console/pc_keyb.c, console/ps2_mouse.c,
	console/vgainit.c: Made mouse parser engine generic. Now use generic
	serial mouse driver. Moved many externs from C to .h.
	* console/kbd_parser.c, console/serial_mouse_config.c: New files.
	* console/mouse_parser.c, console/mouse_parser.h,
	console/serial_mouse.c, console/serial_mouse.h: Removed.

2011-03-04	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* timer/timer.c: Retry up to 5 times when the calibration loop fails.

2011-02-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* include/bsp.h, include/tm27.h:
	Use "__asm__" instead of "asm" for improved c99-compliance.

2011-02-09	Jennifer Averett <jennifer.averett@oarcorp.com>

	* console/ps2_mouse.c: Formatting changes in preparation for making
	mouse parsing and serial mouse driver BSP independent.

2011-02-09	Ralf Corsépius <ralf.corsepius@rtems.org>

	* timer/timer.c: Include <rtems/btimer.h>.